fabric/testdata/out/ing_skipper-perf-test-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"21d51a04-9699-11e9-9fa3-065b20c8b844"},"name":"skipper-perf-test-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"skipper-perf-test.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"skipper-perf-test","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-24T16:01:50Z"
  generation: 1
  labels:
    controller-uid: 21d51a04-9699-11e9-9fa3-065b20c8b844
  name: skipper-perf-test-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: skipper-perf-test
    uid: 21d51a04-9699-11e9-9fa3-065b20c8b844
  resourceVersion: "1357488765"
  uid: 60532165-9699-11e9-9fa3-065b20c8b844
spec:
  rules:
  - host: skipper-perf-test.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: skipper-perf-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
